--- a/src/components/card/Card.module.scss
+++ b/src/components/card/Card.module.scss
@@ -4,12 +4,17 @@
 .card {
   background: #FFFFFF;
   border-radius: 10px;
-  padding: 20px;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  text-align: center;
+
+  img {
+    border-radius: 10px;
+  }
+  &__content {
+    padding: 10px;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+  }
 }
 
 .photo {
@@ -23,11 +28,18 @@
 }
 
 .name {
-  margin: 20px 0;
+  margin: 0px 0 10px 0;
+  font-weight: 600;
+  font-size: 18px;
+  color: $red;
   white-space: nowrap;
   @extend %font-common;
 }
 
-.contacts {
+.description {
   @extend %font-common;
+
+  span {
+    color: $red;
+  }
 }
