added full recipeInfo component

--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -8,6 +8,7 @@ $orange: #FFC148;
 $yellow: #FFE000;
 $green: #64C641;
 $light-gray: #F8F8F8;
+$light-black: rgba(0, 0, 0, 0.65);
 
 $input-default: #D0CFCF;
 $input-red: #CB3D40;
