--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -9,6 +9,7 @@ $yellow: #FFE000;
 $green: #64C641;
 $light-gray: #F8F8F8;
 $light-black: rgba(0, 0, 0, 0.65);
+$light-black2: rgba(0, 0, 0, 0.3);
 
 $input-default: #D0CFCF;
 $input-red: #CB3D40;
