--- a/src/components/card/Card.module.scss
+++ b/src/components/card/Card.module.scss
@@ -19,11 +19,34 @@
 
 .photo {
   height: 300px;
+  position: relative;
 
   & img {
     width: 100%;
     height: 100%;
     object-fit: cover;
+  }
+  &__changeIcon {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 50px;
+    height: 50px;
+    background: $light-black2;
+    border-radius: 15px;
+    z-index: 2;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    opacity: 0.35;
+
+    &:hover {
+      opacity: 1;
+    }
+    & img {
+      width: 25px;
+      height: 25px;
+    }
   }
 }
 
