added selectedRecipes layout, logic. Added GoBack component, loader

--- a/src/components/card/Card.module.scss
+++ b/src/components/card/Card.module.scss
@@ -39,6 +39,7 @@
     align-items: center;
     justify-content: center;
     opacity: 0.35;
+    cursor: pointer;
 
     &:hover {
       opacity: 1;
