--- a/src/components/recipeInfo/RecipeInfo.module.scss
+++ b/src/components/recipeInfo/RecipeInfo.module.scss
@@ -18,10 +18,11 @@
 }
 
 .leftBlock {
-  flex: 0 1 600px;
+  flex: 0 0 600px;
 
   &__topContent {
-    margin-bottom: 8px;
+    margin-bottom: 25px;
+    position: relative;
 
     &__title {
       font-size: 24px;
@@ -32,12 +33,13 @@
     }
     &__tags {
       color: $light-black;
+      position: absolute;
     }
   }
 }
 
 .photo {
-  width: 600px;
+  width: 100%;
 
   img {
     border-radius: 10px;
@@ -48,7 +50,7 @@
 }
 
 .rightBlock {
-  margin: 32px 5px 3px 50px;
+  margin: 55px 5px 3px 50px;
   flex: 0 1 auto;
   display: flex;
   flex-direction: column;
@@ -102,8 +104,8 @@
 .pageItem {
   font-size: 18px;
   list-style: none;
-  width: 25px;
-  height: 25px;
+  width: 28px;
+  height: 28px;
 
   display: flex;
   justify-content: center;
@@ -111,16 +113,21 @@
   margin-top: 2px;
 
   &:hover {
-    background: $lightBlue;
-    border-radius: 10px;
+    color: $blue;
   }
 }
 
 .active {
-  background-color: $red;
+  color: $red;
   border-radius: 10px;
 
   &:hover {
-    background: $red;
+    color: $red;
+  }
+}
+
+@media (max-width: $screen-laptop) {
+  .leftBlock {
+    flex: 0 1 600px;
   }
 }
